Docking (#12)
* Docking Part 1

* Fixed placement method (#3)

The method to determine the positioning of a dragged tab has been fixed by including the aspect ratio in the algorithm

* Remove all custom docking. Now using library

* Update CodeEditor.java

Co-authored-by: SerialSniper <51060730+SerialSniper@users.noreply.github.com>